commit update gateway and donation
