# api-gateway/entity/User.go
@@ -1,0 +1,41 @@
+package entity
+
+import (
+	"errors"
+	"strings"
+	"time"
+)
+
+type User struct {
+	ID        int       `json:"id"`
+	Name      string    `json:"name"`
+	Email     string    `json:"email"`
+	Password  string    `json:"password,omitempty"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+}
+
+func (User) TableName() string {
+	return "users"
+}
+
+func (u *User) Validate() error {
+	if strings.TrimSpace(u.Email) == "" {
+		return errors.New("email is required")
+	}
+	if strings.TrimSpace(u.Password) == "" {
+		return errors.New("password is required")
+	}
+	return nil
+}
+
+type UserRegister struct {
+	Name     string `json:"name"`
+	Email    string `json:"email"`
+	Password string `json:"password,omitempty"`
+}
+
+type UserLogin struct {
+	Email    string `json:"email"`
+	Password string `json:"password,omitempty"`
+}
