# api-gateway/route/route.go
@@ -3,15 +3,14 @@ package route
 import (
 	"os"
 
-	_ "crowdfund/docs" // docs is generated by Swag CLI, you have to import it.
-
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
 	echoSwagger "github.com/swaggo/echo-swagger" // echo-swagger middleware
 
-	"github.com/rayhanadri/crowdfunding/api-gateway/config"     // Import the config package
+	// Import the config package
+	_ "github.com/rayhanadri/crowdfunding/api-gateway/docs"     // docs is generated by Swag CLI, you have to import it.
+	"github.com/rayhanadri/crowdfunding/api-gateway/entity"     // Import the model package
 	"github.com/rayhanadri/crowdfunding/api-gateway/handler"    // Import the handler package
-	"github.com/rayhanadri/crowdfunding/api-gateway/model"      // Import the model package
 	"github.com/rayhanadri/crowdfunding/api-gateway/mw"         // Import the middleware package
 	"github.com/rayhanadri/crowdfunding/api-gateway/repository" // Import the repository package
 )
@@ -21,8 +20,8 @@ func ExecRouter() {
 
 	// Initialize the repository
 	userRepo := repository.NewUserRepository("user-service-273575294549.asia-southeast2.run.app:443")
-	transRepo := repository.NewTransactionRepository(config.DB)
-	donationRepo := repository.NewDonationRepository(config.DB)
+	donationRepo := repository.NewDonationRepository("donation-service-273575294549.asia-southeast2.run.app:443")
+	transRepo := repository.NewTransactionRepository("donation-service-273575294549.asia-southeast2.run.app:443")
 
 	// Initialize the handlers
 	userHandler := handler.NewUserHandler(userRepo)
@@ -60,11 +59,6 @@ func ExecRouter() {
 	// g.POST("/blogs", blogHandler.CreateBlog)     //
 	// g.PUT("/blogs/:id", blogHandler.UpdateBlog)  //
 
-	// Report routes
-	g.GET("/reports", donationHandler.GetAllDonations)          // Get reports donation all time
-	g.GET("/reports/campaign", donationHandler.GetDonationByID) // Get reports donation campaign ranking
-	g.GET("/reports/users", donationHandler.GetDonationByID)    // Get reports donation by users ranking
-
 	// Donation routes
 	g.GET("/donations", donationHandler.GetAllDonations)     // Get all donations
 	g.GET("/donations/:id", donationHandler.GetDonationByID) // Get donation by ID
@@ -72,11 +66,11 @@ func ExecRouter() {
 	g.PUT("/donations/:id", donationHandler.UpdateDonation)  // Update donation by ID
 
 	// Transaction routes
-	g.GET("/transactions", transHandler.GetAllTransaction, mw.CheckAuthMiddleware)                       // Get all transactions for a user
-	g.GET("/transactions/:id", transHandler.GetTransactionByID, mw.CheckAuthMiddleware)                  // Get transaction by ID for a user
-	g.POST("/transactions", transHandler.CreateTransaction, mw.CheckAuthMiddleware)                      // Create a new transaction
-	g.PUT("/transactions/:id", transHandler.UpdateTransaction, mw.CheckAuthMiddleware)                   // Update transaction by ID, confirm to complete the transaction
-	g.PUT("/transactions/check-update/:id", transHandler.CheckUpdateTransaction, mw.CheckAuthMiddleware) // Check and update transaction by ID
+	g.GET("/transactions", transHandler.GetAllTransaction, mw.CheckAuthMiddleware)                    // Get all transactions for a user
+	g.GET("/transactions/:id", transHandler.GetTransactionByID, mw.CheckAuthMiddleware)               // Get transaction by ID for a user
+	g.POST("/transactions", transHandler.CreateTransaction, mw.CheckAuthMiddleware)                   // Create a new transaction
+	g.PUT("/transactions/:id", transHandler.UpdateTransaction, mw.CheckAuthMiddleware)                // Update transaction by ID, confirm to complete the transaction
+	g.PUT("/transactions/sync-transaction/:id", transHandler.SyncTransaction, mw.CheckAuthMiddleware) // Check and update transaction by ID
 
 	// Scheduler routes
 	// g.GET("/scheduler/update-transaction-status", schedulerHandler.updatePendingTransaction)   // update transaction status on pending transaction
@@ -103,7 +97,7 @@ func rootShow(c echo.Context) error {
 		DocumentationURL: rootURL + "api/v1/" + "swagger/index.html",
 	}
 
-	var response model.Response
+	var response entity.Response
 	response.Status = 200
 	response.Message = "Welcome to Crowdfunding API"
 	response.Data = welcomeData
